# python-cx_Oracle

./: .gitattributes  .gitignore  .gitmodules  .hgeol  .hgignore  .readthedocs.yaml  AQ.c  BUILD.txt  BooleanVar.c  CONTRIBUTING.md  Callback.c  Connection.c  Cursor.c  CursorVar.c  DateTimeVar.c  Environment.c  Error.c  ExternalDateTimeVar.c  ExternalLobVar.c  ExternalObjectVar.c  HISTORY.txt  IntervalVar.c  LICENSE.txt  LobVar.c  LongVar.c  MANIFEST  MANIFEST.in  NumberVar.c  Object.c  ObjectType.c  ObjectVar.c  PKG-INFO  README.md  README.txt  SessionPool.c  StringUtils.c  StringVar.c  Subscription.c  TimestampVar.c  Transforms.c  (+8 more)
.github/: SECURITY.md  SUPPORT.md  issue_template.md  pull_request_template.md
doc/: Makefile  README.md  build.sh  conf.py  connection.rst  cursor.rst  cx_Oracle.tex  date.rst  index.rst  license.rst  license.tex  lob.rst  module.rst  objecttype.rst  releasenotes.rst  requirements.txt  session_pool.rst  subscription.rst  variable.rst
html/: about.html  connection.html  connobj.html  constants.html  contents.html  cursor.html  cursorobj.html  date.html  dateobj.html  exceptions.html  front.html  genindex.html  index.html  license.html  lob.html  lobobj.html  modindex.html  module.html  node12.html  node4.html  node5.html  objects.inv  py-modindex.html  search.html  searchindex.js  searchindex.json  session_pool.html  sesspool.html  subscription.html  variable.html  varobj.html
samples/: AdvancedQueuing.py  AdvancedQueuingNotification.py  AppContext.py  ArrayDMLRowCounts.py  BatchErrors.py  BindInsert.py  BindQuery.py  BulkAQ.py  CQN.py  (+100 more)
(+273 files in other folders)
