[metadata]
name = cx_Oracle
description = Python interface to Oracle
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Oracle, database
author = "Anthony Tuininga",
author_email = "anthony.tuininga@gmail.com",
license = BSD License
url = https://oracle.github.io/python-cx_Oracle
project_urls =
    Installation = https://cx-oracle.readthedocs.io/en/latest/user_guide/installation.html
    Samples = https://github.com/oracle/python-cx_Oracle/tree/main/samples
    Documentation = http://cx-oracle.readthedocs.io
    Release Notes = https://cx-oracle.readthedocs.io/en/latest/release_notes.html#releasenotes
    Issues = https://github.com/oracle/python-cx_Oracle/issues
    Source = https://github.com/oracle/python-cx_Oracle
python_requires = >=3.6
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 3 :: Only
    Topic :: Database
